# whispr

./: .gitignore  Cargo.toml  README.md
src/: app.rs  assets.rs  audio.rs  config.rs  core.rs  history.rs  hotkey.rs  keychain.rs  main.rs  model.rs  paste.rs  state.rs  stt.rs  text.rs  tray.rs  ui.rs
src/stt/: mod.rs  openai.rs  parakeet.rs
src/ui/: settings.rs  skeleton.rs  theme.rs
