[package]
name = "yap"
version = "0.1.0"
edition = "2024"

[dependencies]
# GPUI (Zed) — pre-1.0. Direct rev pin would diverge from gpui-component's
# transitive gpui pull, producing two `gpui` versions in the graph. Instead we
# rely on the committed Cargo.lock for reproducibility.
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

# STT: sherpa-rs wraps sherpa-onnx C++ via prebuilt binaries.
# Crate is in maintenance mode but works; swap to upstream `sherpa-onnx` later if needed.
sherpa-rs = "0.6"

# Audio capture
cpal = "0.15"

# Clipboard
arboard = "3"

# HTTP + archive + hash
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
tar = "0.4"
bzip2 = "0.4"
sha2 = "0.10"
hex = "0.4"

# Runtime + IPC
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Misc
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSThread"] }
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSAppearance",
    "NSResponder",
    "NSView",
    "NSControl",
    "NSButton",
    "NSImage",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSEvent",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
